
  You should have received a copy of the GNU General Public License along
  with this program; if not, write to the Free Software Foundation, Inc.,
  51 Franklin St, Fifth Floor, Boston, MA 02110-1301  USA
*/

GA  1.1.1 - 2010-xx-xx

- Added MySQL_Connection::getLastStatementInfo() which returns back the
  value of the mysql_info() function of libmysql / Connector/C. (Andrey)


GA  1.1.0 - 2010-09-13

- Added Driver::threadInit() and Driver::threadEnd() methods. Every thread
  of a threaded client must call Driver::threadInit() at the very start
  of the thread before it does anything else with Connector/C++ and every
  thread must call Driver::threadEnd() when it finishes. You can find an
  example demonstrating the use in examples/pthreads.cpp. It is strongly
  discouraged to share connections between threads. It is theoretically
  possible, if you set certain undocumented mutexes, but it is not
  supported at all. Use one connection per thread. Do not have two
  threads using the same connection at the same time. Please
  check the C API notes on threading on the MySQL manual. Connector/C++
  wraps the C API. (Lawrin, Andrey, Ulf)

- Fixed ResultSetMetaData::getColumnType() to return sql::DataType::VARCHAR
  even for multi-type character sets. (Fix from Andrey)

- Fixed ResultSetMetaData::getColumnDisplaySize() to return number
  of characters instead of number of bytes. However, there are cases
  when the MySQL server returns wrong or insufficient meta data, see also
  http://bugs.mysql.com/bug.php?id=6399 . Application developers can rely
  on getColumnDisplaySize() returning at least the number of required
  characters. Application developers shall not expect the exact number
  for a given result set. The driver cannot get any closer but
  returning the maximum number for a given result set (Fix from Andrey)

- Changed FindMySQL.cm so it looks for mysqlclient in the ENV{MySQL_DIR}\lib,
  as that is where it's located in (some) Connector/C distros. (Lawrin)
